--- a/public/styles.css
+++ b/public/styles.css
@@ -62,22 +62,27 @@ header h1 {
 }
 
 /* Form Styles */
+.loginDiv{
+  margin-top: 9rem;
+}
 #auth-container{
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: white;
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin-bottom: 2rem;
+  margin: 2rem;
+
 }
 
 
 form {
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
+  height: auto;
 }
 .loginH{
   font-size: 2rem;
@@ -88,7 +93,7 @@ input, textarea, select {
   padding: 0.8rem;
   margin-bottom: 1rem;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 15px;
   font-size: 1rem;
 }
 
@@ -97,7 +102,7 @@ button {
   color: white;
   padding: 0.8rem 1.5rem;
   border: none;
-  border-radius: 4px;
+  border-radius: 15px;
   cursor: pointer;
   font-size: 1rem;
   transition: background-color 0.3s ease;
@@ -116,7 +121,7 @@ button:hover {
   background-color: white;
   padding: 1rem;
   margin-bottom: 1rem;
-  border-radius: 4px;
+  border-radius: 15px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
